Simplify java binary detection and expand known options-with-values in extractMainClass
Agent-Logs-Url: https://github.com/polyvariant/scala-monitor/sessions/83d49226-5219-42d8-a87e-d8a63efae163

Co-authored-by: kubukoz <894884+kubukoz@users.noreply.github.com>